--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<title>Imgur JS Uploader</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta charset="UTF-8" />
-	<link rel="stylesheet" href="http://www.w3schools.com/lib/w3.css" />
+	<link rel="stylesheet" href="https://www.w3schools.com/lib/w3.css" />
 </head>
 <body>
 	<div class="w3-container w3-teal">
@@ -28,8 +28,8 @@
 	<footer class="w3-padding-16 w3-teal w3-center w3-margin-top">
 		Library maintened by <a href="http://www.weblabor.mx">Weblabor</a> in Tuxtla Gutierrez, Chiapas, México
 	</footer>
-	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-	<script type="text/javascript" src="http://weblabor.mx/libraries/easyJsLibrary/library/script.js"></script>
+	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+	<script type="text/javascript" src="https://weblabormx.github.io/Easy-JS-Library/library/script.js"></script>
 	<script type="text/javascript" src="imgur-js-uploader.min.js"></script>
 	<script type="text/javascript">
 		$('.image').imgurUploader();
