--- a/advanced.html
+++ b/advanced.html
@@ -4,7 +4,7 @@
 	<title>Imgur JS Uploader</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta charset="UTF-8" />
-	<link rel="stylesheet" href="https://www.w3schools.com/lib/w3.css" />
+	<link rel="stylesheet" href="https://libraries.weblabor.mx/w3.css" />
 </head>
 <body>
 	<div class="w3-container w3-teal">
