- image in https - js call in https

--- a/advanced.html
+++ b/advanced.html
@@ -30,7 +30,7 @@
 			<div class="w3-margin-bottom">
 				<span id="fakebutton" class="w3-tag w3-blue">Upload the image</span>
 			</div>
-			<input id="image" class="image" type="text" value="http://i.imgur.com/v2XEjln.jpg" />
+			<input id="image" class="image" type="text" value="https://i.imgur.com/v2XEjln.jpg" />
 		</form>
 	</div>
 	<h6>HTML</h6>
