--- a/simple.html
+++ b/simple.html
@@ -35,7 +35,7 @@
 	<h4 class="w3-teal w3-tag w3-margin-top">When loading the input</h4>
 	<div class="w3-light-grey w3-padding-16 w3-container w3-border">
 		<form method="get">
-			<input id="image" class="image" type="text" value="http://i.imgur.com/v2XEjln.jpg" />
+			<input id="image" class="image" type="text" value="https://i.imgur.com/v2XEjln.jpg" />
 			<input type="submit" />
 		</form>
 	</div>
