- URL of website changed

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 	<p>Use it in forms, only add the input and it will store the url of the image</p>
 	<h4>Requirements</h4>
 	<p>Add the following code the the footer and see examples.</p>
-	<code data-type="codeeditor" data-color="black" data-lang="html">&lt;script type=&quot;text/javascript&quot; src=&quot;http://weblabor.mx/imgur-js-uploader/imgur-js-uploader.js&quot;&gt;&lt;/script&gt;&lt;!-- normal one --&gt;
-&lt;script type=&quot;text/javascript&quot; src=&quot;http://weblabor.mx/imgur-js-uploader/imgur-js-uploader.min.js&quot;&gt;&lt;/script&gt;&lt;!-- minify one --&gt;</code>
+	<code data-type="codeeditor" data-color="black" data-lang="html">&lt;script type=&quot;text/javascript&quot; src=&quot;https://weblabormx.github.io/Imgur-JS-Uploader/imgur-js-uploader.js&quot;&gt;&lt;/script&gt;&lt;!-- normal one --&gt;
+&lt;script type=&quot;text/javascript&quot; src=&quot;https://weblabormx.github.io/Imgur-JS-Uploader/imgur-js-uploader.min.js&quot;&gt;&lt;/script&gt;&lt;!-- minify one --&gt;</code>
 
 	</div>
 	<footer class="w3-padding-16 w3-teal w3-center w3-margin-top">
